--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="img/1.JPG"
+              src="img/1.jpg"
               class="d-block w-100"
               alt="Carousel1"
               style="width: 800px; height: 400px"
@@ -137,7 +137,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="img/2.JPG"
+              src="img/2.jpg"
               class="d-block w-100"
               alt="Carousel2"
               style="width: 800px; height: 400px"
